# matrixai-cli

./: .gitignore  README.md  langgraph.json  pyproject.toml  run_scenario.py
scenarios/: attack-on-taiwan.json  climate-summit.json  corporate-merger.json  cyber-attack.json  diplomatic-crisis.json  race-to-agi.json  supply-chain-crisis.json  trade-dispute.json
src/matrix_ai/: __init__.py  adjudication.py  argumentation.py  main_game_graph.py  scenario_update.py  schemas.py
